correciones de admin

--- a/admin.html
+++ b/admin.html
@@ -33,13 +33,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Botón "Añadir Producto" -->
-    <a href="editar.html" class="btn btn-dark position-fixed top-0 end-0 mt-5 me-3">Añadir Producto</a>
+    <!-- Fin Navbar -->
 
 
 
