--- a/adminpedido.html
+++ b/adminpedido.html
@@ -35,10 +35,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- Fin Navbar -->
 
 
