--- a/registro.html
+++ b/registro.html
@@ -25,15 +25,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="admin.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="registro.html">Registrarse</a>
+                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <!-- Fin Navbar -->
 
     <!-- Contenido de la página -->
     <div class="container mt-5">
