--- a/totalusuarios.html
+++ b/totalusuarios.html
@@ -33,10 +33,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <!-- Fin Navbar -->
 
     <!-- Perfiles de Usuarios -->
     <section>
@@ -51,6 +56,11 @@
                             <h5 class="card-title">Correo Electrónico: juan@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -62,6 +72,11 @@
                             <h5 class="card-title">Correo Electrónico: maria@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -73,6 +88,11 @@
                             <h5 class="card-title">Correo Electrónico: carlos@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -84,6 +104,11 @@
                             <h5 class="card-title">Correo Electrónico: laura@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -95,6 +120,11 @@
                             <h5 class="card-title">Correo Electrónico: andres@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -106,6 +136,11 @@
                             <h5 class="card-title">Correo Electrónico: sofia@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -117,6 +152,11 @@
                             <h5 class="card-title">Correo Electrónico: pablo@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
@@ -128,6 +168,11 @@
                             <h5 class="card-title">Correo Electrónico: carolina@example.com</h5>
                             <p class="card-text">Detalles del perfil...</p>
                             <a href="usuarios.html" class="btn btn-dark">Ver Detalles</a>
+                            <a href="editarusuarios.html" class="btn btn-light">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger">
+                                <i class="fa-solid fa-trash"></i> Borrar</button>
                         </div>
                     </div>
                 </div>
