--- a/editarusuarios.html
+++ b/editarusuarios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nike Air Max Pulse</title>
+    <title>Nikedas - Editar Usuario</title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
@@ -45,56 +45,48 @@
 
     <!-- Fin Navbar -->
 
-    <!-- Producto -->
-
-    <!-- Producto -->
     <section>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="product-img">
-                        <img src="assets/images/productos/producto1b.webp" class="img-fluid rounded">
-                        <div class="img-buttons">
-                            <button type="button" class="img-btn btn btn-outline-light">
-                                <i class="fa-solid fa-chevron-left"></i>
-                            </button>
-                            <button type="button" class="img-btn btn btn-outline-light">
-                                <i class="fa-solid fa-chevron-right"></i>
-                            </button>
+            <h1>Editar Usuario</h1>
+            <div class="row mt-4">
+                <!-- Formulario de edición de usuario -->
+                <div class="col-12 col-md-8">
+                    <form action="totalusuarios.html" method="GET">
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" value="Juan">
                         </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6">
-                    <!-- Formulario de edición -->
-                    <form action="actualizar_producto.php" method="POST">
-                        <h3 class="producto-modelo">Air Max Pulse</h3>
-                        <p class="text-body-secondary producto-marca mb-2">Nike</p>
-                        <label for="precio" class="form-label">Precio:</label>
-                        <input type="text" id="precio" name="precio" class="form-control mb-2" value="$150.000">
-                        <label for="nombre" class="form-label">Nombre:</label>
-                        <input type="text" id="nombre" name="nombre" class="form-control mb-2" value="Air Max Pulse">
-                        <label for="tallas" class="form-label">Tallas disponibles:</label>
-                        <select id="tallas" name="tallas" class="form-select mb-2" multiple>
-                            <option value="36">36</option>
-                            <option value="37">37</option>
-                            <option value="38">38</option>
-                            <!-- Agregar las demás tallas aquí -->
-                        </select>
-                        <button type="button" class="btn btn-dark mb-2" onclick="redirectToAdmin()">Listo</button>
-
-                        <script>
-                            function redirectToAdmin() {
-                                window.location.href = "admin.html";
-                            }
-                        </script>
+                        <div class="mb-3">
+                            <label for="apellidos" class="form-label">Apellidos</label>
+                            <input type="text" class="form-control" id="apellidos" value="Pérez">
+                        </div>
+                        <div class="mb-3">
+                            <label for="direccion" class="form-label">Dirección</label>
+                            <input type="text" class="form-control" id="direccion" value="Calle 123">
+                        </div>
+                        <div class="mb-3">
+                            <label for="telefono" class="form-label">Teléfono</label>
+                            <input type="tel" class="form-control" id="telefono" value="+1234567890">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" value="juanperez@example.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="fechaNacimiento" class="form-label">Fecha de Nacimiento</label>
+                            <input type="date" class="form-control" id="fechaNacimiento" value="1990-01-01">
+                        </div>
+                        <!-- Botón Listo -->
+                        <div class="mb-3">
+                            <button type="submit" class="btn btn-dark">Listo</button>
+                        </div>
+                        <!-- Botón Listo -->
                     </form>
                 </div>
+                <!-- Fin Formulario de edición de usuario -->
             </div>
         </div>
     </section>
-    <!-- Termino seccion producto -->
-
-
 
     <!-- Footer -->
     <footer>
@@ -109,8 +101,7 @@
             </div>
         </div>
     </footer>
-
-
+    <!-- Fin Footer -->
 
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 </body>
