--- a/login.html
+++ b/login.html
@@ -23,24 +23,31 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="admin.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="registro.html">Registro</a>
+                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Fin Navbar -->
 
     <!-- Contenido de la página -->
     <div class="container mt-5">
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Inicio de Sesión</h3>
         <!-- Formulario de inicio de sesión -->
-        <form action="index.html" method="POST">
+        <form id="formulario">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="correo" name="correo" required>
@@ -50,27 +57,34 @@
                 <input type="password" class="form-control" id="contraseña" name="contraseña" required>
             </div>
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-dark">Iniciar Sesión</button>
+                <button type="button" id="botonIniciarSesion" class="btn btn-dark">Iniciar Sesión</button>
             </div>
         </form>
-        </form>
-        </ /div>
-        <!-- Footer -->
-        <footer>
-            <div class="container-fluid bg-body-secondary">
+        <!-- Mensaje de error -->
+        <p id="mensajeError" style="color: red;"></p>
+        <!-- Fin mensaje de error -->
+    </div>
+    <!-- Fin Contenido de la página -->
 
-                <div class="container footer-container">
-                    <div class="footer-logos">
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-                    </div>
-                    <p class="footer-text">© 2024 Nikedas Chile</p>
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid bg-body-secondary">
+
+            <div class="container footer-container">
+                <div class="footer-logos">
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
-
+                <p class="footer-text">© 2024 Nikedas Chile</p>
             </div>
-        </footer>
 
+        </div>
+    </footer>
+    <!-- Fin Footer -->
 
-        <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="assets/js/validacion.js"></script>
 </body>
+
+</html>
