--- a/usuarios.html
+++ b/usuarios.html
@@ -14,7 +14,6 @@
 <body>
 
     <!-- Navbar -->
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-4" href="#">
@@ -36,10 +35,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="editar.html">Editar productos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- Fin Navbar -->
 
     <section>
