--- a/login.html
+++ b/login.html
@@ -93,26 +93,27 @@
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Inicio de Sesión</h3>
         <!-- Formulario de inicio de sesión -->
-        <form action="index.html" method="POST">
+        <form id="formulario" class="formulario" action="index.html" method="POST">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="correo" name="correo" required>
+                <input type="email" class="form-control" id="correo" name="correo" >
             </div>
             <div class="mb-3">
-                <label for="contraseña" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" name="contraseña" required>
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password" name="password" >
+            </div>
+            <div class="mb-3">
+                <p id="mensajeError" style="color: red;" class="mb-3"></p>
             </div>
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-dark">Iniciar Sesión</button>
+                <button type="" class="btn btn-dark">Iniciar Sesión</button>
             </div>
         </form>
-        </form>
-        </ /div>
+    </div>
         <!-- Footer -->
         <footer>
             <div class="container-fluid bg-body-secondary">
-
-                <div class="container footer-container">
+                <div class=" footer-container">
                     <div class="footer-logos">
                         <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
                         <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
@@ -120,10 +121,10 @@
                     </div>
                     <p class="footer-text">© 2024 Nikedas Chile</p>
                 </div>
-
             </div>
         </footer>
 
 
         <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+        <script src="./assets/js/vlogin.js"></script>
 </body>
