--- a/direcciones.html
+++ b/direcciones.html
@@ -144,7 +144,8 @@
                                             <div class="modal-dialog">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h1 class="modal-title fs-5" id="modalEliminar">Eliminar direccion
+                                                        <h1 class="modal-title fs-5" id="modalEliminar">Eliminar
+                                                            direccion
                                                         </h1>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                             aria-label="Close"></button>
@@ -155,7 +156,8 @@
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
                                                             data-bs-dismiss="modal">Cancelar</button>
-                                                        <button type="button" class="btn btn-danger">Si, eliminar</button>
+                                                        <button type="button" class="btn btn-danger">Si,
+                                                            eliminar</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -181,7 +183,10 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form>
+                                        <div class="mb-3">
+                                            <p id="mensajeError" style="color: red;" class="mb-3"></p>
+                                        </div>
+                                        <form id="formulario" action="direcciones.html" method="POST">
                                             <div class="mb-3">
                                                 <label for="calle" class="form-label">Calle</label>
                                                 <input type="text" class="form-control" id="calle"
@@ -198,26 +203,33 @@
                                                     aria-describedby="depto">
                                             </div>
                                             <div class="mb-3">
-                                                <label for="region" class="form-label">Región</label>
-                                                <input type="text" class="form-control" id="region"
-                                                    aria-describedby="region">
+                                                <label for="region" class="form-label">Region</label>
+                                                <select id="region" class="form-control">
+                                                    <option value="">--Selecciona una region--</option>
+                                                    <option value="biobio" id="biobio">Biobio</option>
+                                                    <option value="metropolitana" id="metropolitana">Metropolitana
+                                                    </option>
+                                                </select>
                                             </div>
                                             <div class="mb-3">
                                                 <label for="comuna" class="form-label">Comuna</label>
-                                                <input type="text" class="form-control" id="comuna"
-                                                    aria-describedby="comuna">
+                                                <select id="comuna" class="form-control">
+                                                    <option value="">--Selecciona una comuna--</option>
+                                                    <option value="concepcion" id="concepcion">Concepcion</option>
+                                                    <option value="talcahuano" id="talcahuano">Talcahuano</option>
+                                                </select>
                                             </div>
                                             <div class="mb-3 form-check">
-                                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                                <label class="form-check-label" for="exampleCheck1">Convertir en
+                                                <input type="checkbox" class="form-check-input" id="dirdefecto">
+                                                <label class="form-check-label" for="dirdefecto">Convertir en
                                                     dirección por defecto</label>
                                             </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-bs-dismiss="modal">Cerrar</button>
+                                                <button type="submit" class="btn btn-primary" id="btnguardar">Guardar</button>
+                                            </div>
                                         </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="button" class="btn btn-primary">Guardar</button>
                                     </div>
                                 </div>
                             </div>
@@ -254,8 +266,8 @@
 
 
 
-
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/vperfil.js"></script>
 </body>
 
 </html>
