--- a/perfil.html
+++ b/perfil.html
@@ -114,21 +114,29 @@
 
                 <div class="col-12 col-md-8">
                     <h2>Mis Datos</h2>
-                    <form class="mt-4">
+                    <form id="formulario" class="mt-4" action="perfil.html" method="POST">
                         <div class="mb-3">
-                            <label for="nombre" class="form-label">Nombre y Apellido</label>
-                            <input type="name" class="form-control" id="nombre" aria-describedby="name"
-                                placeholder="Usuario">
+                            <p id="mensajeError" style="color: red;" class="mb-3"></p>
                         </div>
                         <div class="mb-3">
-                            <label for="mail" class="form-label">Correo</label>
-                            <input type="mail" class="form-control" id="mail" aria-describedby="mail"
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="name" class="form-control" id="nombre" aria-describedby="name"
+                                placeholder="Nombre">
+                        </div>
+                        <div class="mb-3">
+                            <label for="apellidos" class="form-label">Apellidos</label>
+                            <input type="name" class="form-control" id="apellidos" aria-describedby="name"
+                                placeholder="Apellido">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Correo</label>
+                            <input type="mail" class="form-control" id="email" aria-describedby="mail"
                                 placeholder="juan@correo.cl">
                         </div>
                         <div class="mb-3">
-                            <label for="phone" class="form-label">Telefono</label>
-                            <input type="phone" class="form-control" id="phone" aria-describedby="phone"
-                                placeholder="+569 12345678">
+                            <label for="telefono" class="form-label">Telefono</label>
+                            <input type="phone" class="form-control" id="telefono" aria-describedby="phone"
+                                placeholder="9 12345678">
                         </div>
                         <div class="mb-3">
                             <label for="rut" class="form-label">RUT</label>
@@ -136,14 +144,18 @@
                                 placeholder="201234567">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="password">
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirm_password" class="form-label">Confirme contraseña</label>
+                            <input type="password" class="form-control" id="confirm_password">
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Suscribete a nuestros correos</label>
                         </div>
-                        <button type="submit" class="btn btn-dark">Guardar cambios</button>
+                        <button type="submit" class="btn btn-dark" id="">Guardar cambios</button>
                     </form>
                 </div>
             </div>
@@ -178,6 +190,7 @@
 
 
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/vdatosperfil.js"></script>
 </body>
 
 </html>
