--- a/editar.html
+++ b/editar.html
@@ -66,7 +66,8 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <!-- Formulario de edición -->
-                    <form action="actualizar_producto.php" method="POST" enctype="multipart/form-data">
+                    <p id="mensajeError" style="color: red;"></p>
+                    <form id="formulario" action="" method="POST">
                         <h3 class="producto-modelo">Air Max Pulse</h3>
                         <p class="text-body-secondary producto-marca mb-2">Nike</p>
                         <label for="precio" class="form-label">Precio:</label>
@@ -82,14 +83,7 @@
                         </select>
                         <label for="imagen" class="form-label">Seleccionar imagen:</label>
                         <input type="file" id="imagen" name="imagen" class="form-control mb-2" accept="image/*">
-                        <button type="button" class="btn btn-dark mb-2" onclick="redirectToAdmin()">Listo</button>
-
-                        <script>
-                            function redirectToAdmin() {
-                                window.location.href = "admin.html";
-                            }
-                        </script>
-                    </form>
+                        <button type="submit" class="btn btn-dark mb-2">Listo</button>
                     </form>
                 </div>
             </div>
@@ -116,6 +110,7 @@
 
 
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/validareditar.js"></script>
 </body>
 
 </html>
