--- a/registro.html
+++ b/registro.html
@@ -105,26 +105,26 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" >
                         <p id="errorNombre" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="apellidos" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" required>
+                        <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" >
                         <p id="errorApellidos" class="mensaje-error"></p>
                     </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label for="rut">RUT</label>
-                <input type="text" class="form-control" id="rut" name="rut" placeholder="12345678-9" required>
+                <input type="text" class="form-control" id="rut" name="rut" placeholder="12345678-9" >
                 <p id="errorRut" class="mensaje-error"></p>
             </div>
             <div class="mb-3">
                 <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento</label>
-                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento" required>
+                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento" >
                 <p id="errorFechaNac" class="mensaje-error"></p>
             </div>
 
@@ -132,14 +132,14 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="telefono" class="form-label">Telefono de Contacto</label>
-                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="912345678" required>
+                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="912345678" >
                         <p id="errorTelefono" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="juan@correo.cl" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="juan@correo.cl" >
                         <p id="errorCorreo" class="mensaje-error"></p>
                     </div>
                 </div>
@@ -148,26 +148,26 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password" >
                         <p id="errorPassword" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="confirm_password" class="form-label">Confirmar Contraseña</label>
-                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" >
                     </div>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label for="direccion" class="form-label">Dirección</label>
-                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Avenida Mentira" required>
+                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Avenida Mentira" >
                 <p id="errorDireccion" class="mensaje-error"></p>
             </div>
             <div class=" mb-3">
                 <label for="depto" class="form-label">Departamento o Detalle</label>
-                <input type="text" class="form-control" id="depto" placeholder="Departamento/Detalle" placeholder="123" required>
+                <input type="text" class="form-control" id="depto" placeholder="Departamento/Detalle" placeholder="123" >
                 <p id="errorDepto" class="mensaje-error"></p>
             </div>
             <div class="row">
