--- a/editar.html
+++ b/editar.html
@@ -67,11 +67,11 @@
                 <div class="col-12 col-md-6">
                     <!-- Formulario de edición -->
                     <p id="mensajeError" style="color: red;"></p>
-                    <form id="formulario" action="" method="POST">
+                    <form id="formulario" class="" action="admin.html" >
                         <h3 class="producto-modelo">Air Max Pulse</h3>
                         <p class="text-body-secondary producto-marca mb-2">Nike</p>
                         <label for="precio" class="form-label">Precio:</label>
-                        <input type="text" id="precio" name="precio" class="form-control mb-2" value="$150.000">
+                        <input type="text" id="precio" name="precio" class="form-control mb-2" value="150000">
                         <label for="nombre" class="form-label">Nombre:</label>
                         <input type="text" id="nombre" name="nombre" class="form-control mb-2" value="Air Max Pulse">
                         <label for="tallas" class="form-label">Tallas disponibles:</label>
