--- a/editarusuarios.html
+++ b/editarusuarios.html
@@ -51,7 +51,7 @@
             <div class="row mt-4">
                 <!-- Formulario de edición de usuario -->
                 <div class="col-12 col-md-8">
-                    <form action="totalusuarios.html" method="GET">
+                    <form id="formulario" class="formulario" action="totalusuarios.html" method="POST">
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="nombre" value="Juan">
