--- a/carrito.html
+++ b/carrito.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <!-- Mini navbar -->
+    <div class="extra-nav">
+        <div class="container d-flex justify-content-end">
+            <a href="pedidos.html" class="me-3">Seguimiento de pedidos</a>
+            <span class="me-3">/</span>
+            <a href="registro.html">Registrate</a>
+        </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -141,7 +149,7 @@
                                         </button>
 
                                         <div data-mdb-input-init class="form-outline">
-                                            <input id="cantidad" min="0" max="10" name="quantity" value="1" type="number" class="form-control"/>
+                                            <input id="cantidad" min="1" max="10" name="quantity" value="1" type="number" class="form-control" readonly/>
                                         </div>
 
                                         <button data-mdb-button-init data-mdb-ripple-init
