--- a/login.html
+++ b/login.html
@@ -7,10 +7,18 @@
     <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/admin.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <!-- Mini navbar -->
+    <div class="extra-nav">
+        <div class="container d-flex justify-content-end">
+            <a href="pedidos.html" class="me-3">Seguimiento de pedidos</a>
+            <span class="me-3">/</span>
+            <a href="registro.html">Registrate</a>
+        </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -93,20 +101,26 @@
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Inicio de Sesión</h3>
         <!-- Formulario de inicio de sesión -->
-        <form id="formulario" class="formulario" action="index.html" method="POST">
+        <form id="formulario" class="formulario col-12 col-md-6 mx-auto" action="index.html" method="GET">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="correo" name="correo" >
+                <input type="email" class="form-control" id="correo" name="correo" required>
+                <p id="errorCorreo" class="mensaje-error"></p>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="password" >
+                <input type="password" class="form-control" id="password" name="password" required>
+                <p id="errorPassword" class="mensaje-error"></p>
             </div>
             <div class="mb-3">
-                <p id="mensajeError" style="color: red;" class="mb-3"></p>
+                <p id="mensajeError" class="mb-3 mensaje-error"></p>
             </div>
-            <div class="d-grid gap-2">
-                <button type="" class="btn btn-dark">Iniciar Sesión</button>
+            <div class="d-flex mb-3 align-items-center">
+                <button type="" class="btn btn-dark me-auto">Iniciar sesión</button>
+            </div>
+            <div>
+                <p>No tienes cuenta? <a href="registro.html">Registrate aqui</a></p>
+                <p>Olvidaste tu contraseña? <a href="recuperar.html">Recuperala aqui</a></p>
             </div>
         </form>
     </div>
