--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="editar.html">Editar productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="editar.html">Añadir Producto</a>
+                        <a class="nav-link" href="añadir.html">Añadir Producto</a>
                     </li>
                 </ul>
             </div>
