--- a/usuarios.html
+++ b/usuarios.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="editar.html">Editar productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="añadir.html">Añadir Producto</a>
+                    </li>
                 </ul>
             </div>
         </div>
