--- a/registro.html
+++ b/registro.html
@@ -107,26 +107,26 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" >
+                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
                         <p id="errorNombre" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="apellidos" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" >
+                        <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" required>
                         <p id="errorApellidos" class="mensaje-error"></p>
                     </div>
                 </div>
             </div>
             <div class="mb-3">
-                <label for="rut">RUT</label>
-                <input type="text" class="form-control" id="rut" name="rut" placeholder="12345678-9" >
+                <label for="rut">RUT (sin puntos y con guion)</label>
+                <input type="text" class="form-control" id="rut" name="rut" placeholder="12345678-9" required>
                 <p id="errorRut" class="mensaje-error"></p>
             </div>
             <div class="mb-3">
                 <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento</label>
-                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento" >
+                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento" required>
                 <p id="errorFechaNac" class="mensaje-error"></p>
             </div>
 
@@ -134,14 +134,14 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="telefono" class="form-label">Telefono de Contacto</label>
-                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="912345678" >
+                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="912345678" required>
                         <p id="errorTelefono" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="juan@correo.cl" >
+                        <input type="email" class="form-control" id="email" name="email" placeholder="juan@correo.cl" required>
                         <p id="errorCorreo" class="mensaje-error"></p>
                     </div>
                 </div>
@@ -150,21 +150,23 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password" >
+                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="checkbox" class="me-2" onclick="showPass()">Mostrar contraseña
                         <p id="errorPassword" class="mensaje-error"></p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="confirm_password" class="form-label">Confirmar Contraseña</label>
-                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" >
+                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                        <input type="checkbox" class="me-2" onclick="showConfirmPass()">Mostrar contraseña
                     </div>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label for="direccion" class="form-label">Dirección</label>
-                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Avenida Mentira" >
+                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Avenida Mentira" required>
                 <p id="errorDireccion" class="mensaje-error"></p>
             </div>
             <div class=" mb-3">
