--- a/login.html
+++ b/login.html
@@ -110,6 +110,7 @@
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="password" name="password" required>
+                <input type="checkbox" class="me-2" onclick="showPass()">Mostrar contraseña
                 <p id="errorPassword" class="mensaje-error"></p>
             </div>
             <div class="mb-3">
