--- a/perfil.html
+++ b/perfil.html
@@ -124,44 +124,47 @@
                     <h2>Mis Datos</h2>
                     <form id="formulario" class="mt-4" action="perfil.html" method="POST">
                         <div class="mb-3">
-                            <p id="mensajeError" style="color: red;" class="mb-3"></p>
+                            <p id="mensajeError" class="mb-3 mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
-                            <input type="name" class="form-control" id="nombre" aria-describedby="name"
-                                placeholder="Nombre">
+                            <input type="name" class="form-control" id="nombre" aria-describedby="name" placeholder="Nombre" value="Juan">
+                            <p id="errorNombre" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="apellidos" class="form-label">Apellidos</label>
-                            <input type="name" class="form-control" id="apellidos" aria-describedby="name"
-                                placeholder="Apellido">
+                            <input type="name" class="form-control" id="apellidos" aria-describedby="name" placeholder="Apellido" value="Perez Gonzalez">
+                            <p id="errorApellidos" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo</label>
-                            <input type="mail" class="form-control" id="email" aria-describedby="mail"
-                                placeholder="juan@correo.cl">
+                            <input type="mail" class="form-control" id="email" aria-describedby="mail" placeholder="juan@correo.cl" value="juanito@gmail.com">
+                            <p id="errorCorreo" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="telefono" class="form-label">Telefono</label>
-                            <input type="phone" class="form-control" id="telefono" aria-describedby="phone"
-                                placeholder="9 12345678">
+                            <input type="phone" class="form-control" id="telefono" aria-describedby="phone" value="912345678">
+                            <p id="errorTelefono" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="rut" class="form-label">RUT</label>
-                            <input type="number" class="form-control" id="rut" aria-describedby="rut"
-                                placeholder="201234567">
+                            <input type="text" class="form-control" id="rut" aria-describedby="rut" value="12345678-9">
+                            <p id="errorRut" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
                             <input type="password" class="form-control" id="password">
+                            <input type="checkbox" class="me-2" onclick="showPass()">Mostrar contraseña
+                            <p id="errorPassword" class="mensaje-error"></p>
                         </div>
                         <div class="mb-3">
                             <label for="confirm_password" class="form-label">Confirme contraseña</label>
                             <input type="password" class="form-control" id="confirm_password">
+                            <input type="checkbox" class="me-2" onclick="showConfirmPass()">Mostrar contraseña
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Suscribete a nuestros correos</label>
+                            <label class="form-check-label" for="exampleCheck1">Suscribete a nuestras ofertas</label>
                         </div>
                         <button type="submit" class="btn btn-dark" id="">Guardar cambios</button>
                     </form>
@@ -169,12 +172,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
 
     <!-- Footer -->
     <footer>
@@ -189,13 +186,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
 
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <script src="./assets/js/vdatosperfil.js"></script>
