fix largo de reecuperar

--- a/recuperar.html
+++ b/recuperar.html
@@ -98,7 +98,7 @@
     <!-- Fin Navbar -->
 
     <!-- Contenido de la página -->
-    <div class="container mt-5 col-12 col-md-6">
+    <div class="container mt-5 col-12 col-md-6 col-lg-4">
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Recuperar Contraseña</h3>
         <!-- Formulario de recuperación de contraseña -->
