--- a/admin.html
+++ b/admin.html
@@ -13,6 +13,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-4" href="#">
                 <img src="assets/images/logo.png" alt="Bootstrap" width="56">
@@ -39,8 +40,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="añadir.html">Añadir Producto</a>
                     </li>
-                </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
             </div>
+            </ul>
+        </div>
         </div>
     </nav>
 
