consumir api listo

--- a/producto.html
+++ b/producto.html
@@ -122,6 +122,10 @@
                     <p class="text-body-secondary producto-marca mb-2">Nike</p>
                     <p class="producto-descripcion mb-2">Descripción del producto</p>
                     <p class="text-body-emphasis producto-precio mb-3 fw-medium">$150.000</p>
+                    <p class="mb-1">Valor en dolares:</p>
+                    <p id="dolar" class="mb-3 fw-medium"></p>
+                    <p class="mb-1">Valor dolar actual:</p>
+                    <p id="dolar-actual" class="mb-3 fw-medium"></p>
                     <div class="producto-tallas">
                         <div class="producto-tallas-text d-flex justify-content-between">
                             <p class="producto-tallas">Tallas disponibles</p>
@@ -354,6 +358,8 @@
 
 
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/jquery-3.7.1.min.js"></script>
+    <script src="./assets/js/consumirapi.js"></script>
 </body>
 
 </html>
