--- a/añadir.html
+++ b/añadir.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="añadir.html">Añadir Producto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Panel de cliente</a>
+                    </li>
                 </ul>
             </div>
         </div>
