--- a/adminpedido.html
+++ b/adminpedido.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="añadir.html">Añadir Producto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Panel Cliente</a>
+                        <a class="nav-link" href="index.html">Panel de cliente</a>
                     </li>
                 </ul>
             </div>
