--- a/editarusuarios.html
+++ b/editarusuarios.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="editar.html">Editar productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Panel de cliente</a>
+                    </li>
                 </ul>
             </div>
         </div>
