--- a/loginAdmin.html
+++ b/loginAdmin.html
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="añadir.html">Añadir Producto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Panel de cliente</a>
+                </li>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
